# BehaviourTree

./: CMakeLists.txt  main.cpp
actions/: patrol.h  reload.h  shoot.h
composites/: selector.h  sequence.h
conditions/: IsAmmoEmpty.h  IsTargetInRange.h  IsTargetVisible.h
core/: behaviour_tree.h  blackboard.h  bt_tracer.h  bt_types.h  composite.h  i_node.h
helpers/: console_colors.h  tree_printer.h
leaf/: action.h  condition.h
